# tar-core

./: .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yaml  fuzz-extended.yaml
doc/: todo-tar-rs.md
examples/: async_parser.rs  interop-go.rs  interop-python.rs  interop-tar.rs  sync_parser.rs  tar_rs_compat.rs  tokio_parser.rs
fuzz/: Cargo.toml  generate_corpus.rs
fuzz/fuzz_targets/: differential.rs  parse.rs  roundtrip.rs
src/: builder.rs  lib.rs  parse.rs
src/parse/: mod.rs  parser.rs
src/stream/: error.rs  limits.rs  mod.rs  parser.rs
tests/: interop_go.rs  interop_python.rs  stream_parser.rs
testutil/: Cargo.toml
testutil/src/: lib.rs
