[package]
name = "tar-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
license = "MIT OR Apache-2.0"
description = "Sans-IO tar header parsing and building for sync and async runtimes"
keywords = ["tar", "zerocopy", "header", "sans-io", "async"]
categories = ["encoding", "parser-implementations", "no-std"]
repository = "https://github.com/composefs/tar-core"
readme = "README.md"

[dependencies]
thiserror = { version = "2.0", default-features = false }
zerocopy = { version = "0.8.0", default-features = false, features = ["derive", "std"] }

[dev-dependencies]
proptest = "1"
tar = "0.4"
tempfile = "3"


[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
unsafe_code = "forbid"

# Standalone workspace (not part of parent workspace)
[workspace]
